// ss protocol gateway to gamesrv

syntax = "proto3";

enum SSGWGSID
{
	SSID_GW_GS_INIT = 0;
	SSID_GW_GS_HEAT_BEAT_REQ = 1;
	SSID_GS_GW_HEAT_BEAT_RSP = 2;
}

message SSGWGSInit
{
}

message SSGWGSHeartBeatReq
{
}

message SSGSGWHeartBeatRsp
{
}

message SSGWGSPkgBody
{
	oneof body
	{
		SSGWGSInit init = 1;
		SSGWGSHeartBeatReq heart_beat_req = 2;
		SSGSGWHeartBeatRsp heart_beat_rsp = 3;
	}
}